--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/main.css">
   <title>NETFLIX CLONE</title>
 </head>
 <body>
   <header>
     <div class="container">
-      <h2>NETFLIX</h2>
+      <h2 class="logo">NETFLIX</h2>
       <nav>
         <a href="#">Inicio</a>
         <a href="#">Séries</a>
