Added Button,title,description and Background image to main movie page

--- a/index.html
+++ b/index.html
@@ -22,5 +22,18 @@
       </nav>
     </div>
   </header>
+
+  <main>
+    <div class="main-movie">
+      <div class="container">
+        <h3 class="title">HOUSE OF CARDS</h3>
+        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam, rem eum debitis nisi maiores solutaQuibusdam, rem eum debitis nisi maiores soluta.</p>
+        <div class="buttons">
+          <button role="button" class="button-main-movie">ASSISTIR AGORA</button>
+          <button role="button" class="button-main-movie">MAIS INFORMAÇÕES</button>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
