Feat - Styled Buttons with hover and icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/main.css">
   <title>NETFLIX CLONE</title>
@@ -27,10 +28,15 @@
     <div class="main-movie">
       <div class="container">
         <h3 class="title">HOUSE OF CARDS</h3>
-        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam, rem eum debitis nisi maiores solutaQuibusdam, rem eum debitis nisi maiores soluta.</p>
+        <p class="description">With Frank out of the picture, Claire Underwood steps fully into her own as the first woman president, but faces formidable threats to her legacy.</p>
         <div class="buttons">
-          <button role="button" class="button-main-movie">ASSISTIR AGORA</button>
-          <button role="button" class="button-main-movie">MAIS INFORMAÇÕES</button>
+          <button role="button" class="button-main-movie">
+            <i class="bi bi-play"></i>
+            ASSISTIR AGORA</button>
+          <button role="button" class="button-main-movie">
+            <i class="bi bi-info-circle"></i>
+            MAIS INFORMAÇÕES
+          </button>
         </div>
       </div>
     </div>
