Feat-Change words to English and manipulate container limit 70% size on main screen

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="container">
       <h2 class="logo">NETFLIX</h2>
       <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Séries</a>
-        <a href="#">Filmes</a>
-        <a href="#">Documentários</a>
+        <a href="#">Main</a>
+        <a href="#">Series</a>
+        <a href="#">Movies</a>
+        <a href="#">Documentaries</a>
       </nav>
     </div>
   </header>
@@ -32,10 +32,11 @@
         <div class="buttons">
           <button role="button" class="button-main-movie">
             <i class="bi bi-play"></i>
-            ASSISTIR AGORA</button>
+            WATCH NOW
+          </button>
           <button role="button" class="button-main-movie">
             <i class="bi bi-info-circle"></i>
-            MAIS INFORMAÇÕES
+            MORE INFORMATION
           </button>
         </div>
       </div>
