Feat-Added JQuery and owl caroulse configs - js/css/html - render movies

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/main.css">
+  <!--CAROUSEL CSS-->
+  <link rel="stylesheet" href="./style/owl/owl.carousel.min.css">
+  <link rel="stylesheet" href="./style/owl/owl.theme.default.min.css">
   <title>NETFLIX CLONE</title>
 </head>
 <body>
@@ -42,5 +45,45 @@
       </div>
     </div>
   </main>
+
+  <div class="carousel-movies">
+    <div class="owl-carousel owl-theme">
+      <div class="item">
+        <img class="box-movies" src="img/mini1.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini2.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini3.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini4.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini5.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini6.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini7.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini8.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini9.jpg" alt="" srcset=""></img>
+      </div>
+      <div class="item">
+        <img class="box-movies" src="img/mini10.jpg" alt="" srcset=""></img>
+      </div>
+      
+    </div>
+  </div>
+  <!--IMPORT CAROUSEL JS-->
+  <script src="./js/owl/jquery.min.js"></script>
+  <script src="./js/owl/owl.carousel.min.js"></script>
+  <script src="./js/owl/index.js"></script>
 </body>
 </html>
