Feat-Start implement mediaquerys and change a little bit the layout

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/main.css">
+
+  <!--RESPONSIVE/MEDIA QUERYS-->
+  <link rel="stylesheet" href="style/responsive.css">
   <!--CAROUSEL CSS-->
   <link rel="stylesheet" href="./style/owl/owl.carousel.min.css">
   <link rel="stylesheet" href="./style/owl/owl.theme.default.min.css">
+
   <title>NETFLIX CLONE</title>
 </head>
 <body>
